Doodlr/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> startQuad varGlobales cambiaScope declaraFunciones PR_main fillMainQuad TO_BRACKOP setMainFuncionValores mainBloque TO_BRACKCLO endPrograma
Rule 2     startQuad -> <empty>
Rule 3     fillMainQuad -> <empty>
Rule 4     endPrograma -> <empty>
Rule 5     cambiaScope -> <empty>
Rule 6     varGlobales -> PR_global defVariables varGlobales
Rule 7     varGlobales -> empty
Rule 8     declaraFunciones -> PR_function defFuncion declaraFunciones
Rule 9     declaraFunciones -> empty
Rule 10    defFuncion -> decTipo ID agregaFuncion TO_PAROP decParametros TO_PARCLO TO_BRACKOP mainBloque TO_BRACKCLO endProcCuad
Rule 11    agregaFuncion -> <empty>
Rule 12    endProcCuad -> <empty>
Rule 13    decParametros -> decTipo ID meteVariable
Rule 14    decParametros -> decTipo ID meteVariable TO_COMA decParametros
Rule 15    mainBloque -> funcCiclos mainBloque
Rule 16    mainBloque -> funcCondicionales mainBloque
Rule 17    mainBloque -> defVariables mainBloque
Rule 18    mainBloque -> llamadaDeFunciones mainBloque
Rule 19    mainBloque -> funcIgual mainBloque
Rule 20    mainBloque -> funcWrite mainBloque
Rule 21    mainBloque -> funcRead mainBloque
Rule 22    mainBloque -> funcReturn mainBloque
Rule 23    mainBloque -> empty
Rule 24    setMainFuncionValores -> <empty>
Rule 25    funcWrite -> PR_write TO_PAROP ID agregaWriteCuad TO_PARCLO TO_PuntoComa
Rule 26    funcRead -> PR_read TO_PAROP ID agregaReadCuad TO_PARCLO TO_PuntoComa
Rule 27    funcReturn -> PR_return TO_PAROP ID agregaReturnCuad TO_PARCLO TO_PuntoComa
Rule 28    funcIgual -> ID pushPilaVar OP_EQUALS pushPilaOp defExpresiones TO_PuntoComa extraNeed agregaIgualCuad
Rule 29    funcIgual -> ID TO_CBRACKOP defExpresiones TO_CBRACKCLO OP_EQUALS defExpresiones cuadruploAsignaArr TO_PuntoComa agregaIgualCuad
Rule 30    extraNeed -> empty
Rule 31    funcCiclos -> PR_While whileCuadP1 TO_PAROP defExpresiones TO_PARCLO whileCuadP2 TO_BRACKOP mainBloque TO_BRACKCLO whileCuadP3
Rule 32    funcCondicionales -> PR_if TO_PAROP defExpresiones TO_PARCLO agregaIfCuadP1 TO_BRACKOP mainBloque TO_BRACKCLO else agregaIfCuadP3
Rule 33    else -> agregaIfCuadP2 PR_else TO_BRACKOP mainBloque TO_BRACKCLO
Rule 34    else -> empty
Rule 35    decTipo -> PR_int tipoVar
Rule 36    decTipo -> PR_float tipoVar
Rule 37    decTipo -> PR_bool tipoVar
Rule 38    decTipo -> PR_void tipoVar
Rule 39    defVariables -> PR_int tipoVar defVar1 TO_PuntoComa
Rule 40    defVariables -> PR_float tipoVar defVar1 TO_PuntoComa
Rule 41    defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa
Rule 42    defVariables -> PR_void tipoVar defVar1 TO_PuntoComa
Rule 43    defVar1 -> variable defVar2
Rule 44    defVar1 -> arreglo defVar2
Rule 45    defVar2 -> TO_COMA defVar1
Rule 46    defVar2 -> empty
Rule 47    variable -> ID meteVariable
Rule 48    arreglo -> ID TO_CBRACKOP TO_INT TO_CBRACKCLO escribeArr
Rule 49    escribeArr -> empty
Rule 50    tipoVar -> empty
Rule 51    meteVariable -> empty
Rule 52    defExpresiones -> decExpresion
Rule 53    defExpresiones -> decExpresion PR_and pushPilaOp defExpresiones agregaAndCuad
Rule 54    defExpresiones -> decExpresion PR_or pushPilaOp defExpresiones agregaAndCuad
Rule 55    decExpresion -> miniExp
Rule 56    decExpresion -> miniExp OP_EQUALTO pushPilaOp miniExp agregaComparCuad
Rule 57    decExpresion -> miniExp OP_DIFF pushPilaOp miniExp agregaComparCuad
Rule 58    decExpresion -> miniExp OP_LESST pushPilaOp miniExp agregaComparCuad
Rule 59    decExpresion -> miniExp OP_LESSTEQ pushPilaOp miniExp agregaComparCuad
Rule 60    decExpresion -> miniExp OP_GREATT pushPilaOp miniExp agregaComparCuad
Rule 61    decExpresion -> miniExp OP_GREATTEQ pushPilaOp miniExp agregaComparCuad
Rule 62    miniExp -> microExp
Rule 63    miniExp -> microExp OP_SUBS pushPilaOp miniExp agregaSumResCuad
Rule 64    miniExp -> microExp OP_ADD pushPilaOp miniExp agregaSumResCuad
Rule 65    microExp -> micromicroExp
Rule 66    microExp -> micromicroExp OP_MULT pushPilaOp microExp agregaMultDivCuad
Rule 67    microExp -> micromicroExp OP_DIV pushPilaOp microExp agregaMultDivCuad
Rule 68    microExp -> micromicroExp OP_MOD pushPilaOp microExp agregaMultDivCuad
Rule 69    micromicroExp -> decSolucion
Rule 70    micromicroExp -> decSolucion OP_POW pushPilaOp micromicroExp agregaPowCuad
Rule 71    decSolucion -> ID pushPilaVar
Rule 72    decSolucion -> ID TO_CBRACKOP defExpresiones TO_CBRACKCLO cuadArrPush
Rule 73    decSolucion -> TO_INT agregaIntCuad
Rule 74    decSolucion -> TO_FLOAT agregaFloatCuad
Rule 75    decSolucion -> PR_true agregaBoolCuad
Rule 76    decSolucion -> PR_false agregaBoolCuad
Rule 77    decSolucion -> llamadaDeFunciones
Rule 78    decSolucion -> TO_PAROP pushPilaOp defExpresiones TO_PARCLO pushPilaOp
Rule 79    llamadaDeFunciones -> ID eraCuadruplo TO_PAROP decParamFuncs TO_PARCLO TO_PuntoComa goSubCuadruplo
Rule 80    llamadaDeFunciones -> funcionesDibuja
Rule 81    llamadaDeFunciones -> empty
Rule 82    funcionesDibuja -> PR_circulo TO_PAROP ID TO_COMA ID TO_COMA ID TO_PARCLO TO_PuntoComa circuloCuad
Rule 83    funcionesDibuja -> PR_rectangulo TO_PAROP ID TO_COMA ID TO_COMA ID TO_PARCLO TO_PuntoComa rectanguloCuad
Rule 84    funcionesDibuja -> PR_espiral TO_PAROP ID TO_COMA ID TO_COMA ID TO_PARCLO TO_PuntoComa espiralCuad
Rule 85    funcionesDibuja -> PR_estrella TO_PAROP ID TO_COMA ID TO_COMA ID TO_PARCLO TO_PuntoComa estrellaCuad
Rule 86    decParamFuncs -> ID paramCuadruplo
Rule 87    decParamFuncs -> ID paramCuadruplo TO_COMA decParamFuncs
Rule 88    decParamFuncs -> empty
Rule 89    pushPilaOp -> empty
Rule 90    pushPilaVar -> empty
Rule 91    agregaIntCuad -> empty
Rule 92    agregaFloatCuad -> empty
Rule 93    agregaBoolCuad -> empty
Rule 94    cuadArrPush -> empty
Rule 95    agregaAndCuad -> <empty>
Rule 96    agregaComparCuad -> <empty>
Rule 97    agregaSumResCuad -> <empty>
Rule 98    agregaMultDivCuad -> <empty>
Rule 99    agregaPowCuad -> <empty>
Rule 100   agregaIgualCuad -> <empty>
Rule 101   cuadruploAsignaArr -> empty
Rule 102   agregaWriteCuad -> <empty>
Rule 103   agregaReadCuad -> <empty>
Rule 104   agregaReturnCuad -> <empty>
Rule 105   agregaIfCuadP1 -> <empty>
Rule 106   agregaIfCuadP2 -> <empty>
Rule 107   agregaIfCuadP3 -> <empty>
Rule 108   whileCuadP1 -> <empty>
Rule 109   whileCuadP2 -> <empty>
Rule 110   whileCuadP3 -> <empty>
Rule 111   paramCuadruplo -> <empty>
Rule 112   eraCuadruplo -> <empty>
Rule 113   goSubCuadruplo -> <empty>
Rule 114   circuloCuad -> <empty>
Rule 115   rectanguloCuad -> <empty>
Rule 116   espiralCuad -> <empty>
Rule 117   estrellaCuad -> <empty>
Rule 118   empty -> <empty>

Terminals, with rules where they appear

ID                   : 10 13 14 25 26 27 28 29 47 48 71 72 79 82 82 82 83 83 83 84 84 84 85 85 85 86 87
OP_ADD               : 64
OP_DIFF              : 57
OP_DIV               : 67
OP_EQUALS            : 28 29
OP_EQUALTO           : 56
OP_GREATT            : 60
OP_GREATTEQ          : 61
OP_LESST             : 58
OP_LESSTEQ           : 59
OP_MOD               : 68
OP_MULT              : 66
OP_POW               : 70
OP_SUBS              : 63
PR_While             : 31
PR_and               : 53
PR_bool              : 37 41
PR_circulo           : 82
PR_else              : 33
PR_espiral           : 84
PR_estrella          : 85
PR_false             : 76
PR_float             : 36 40
PR_function          : 8
PR_global            : 6
PR_if                : 32
PR_int               : 35 39
PR_main              : 1
PR_or                : 54
PR_read              : 26
PR_rectangulo        : 83
PR_return            : 27
PR_true              : 75
PR_void              : 38 42
PR_write             : 25
TO_BRACKCLO          : 1 10 31 32 33
TO_BRACKOP           : 1 10 31 32 33
TO_CBRACKCLO         : 29 48 72
TO_CBRACKOP          : 29 48 72
TO_COMA              : 14 45 82 82 83 83 84 84 85 85 87
TO_FLOAT             : 74
TO_INT               : 48 73
TO_PARCLO            : 10 25 26 27 31 32 78 79 82 83 84 85
TO_PAROP             : 10 25 26 27 31 32 78 79 82 83 84 85
TO_PuntoComa         : 25 26 27 28 29 39 40 41 42 79 82 83 84 85
error                : 

Nonterminals, with rules where they appear

agregaAndCuad        : 53 54
agregaBoolCuad       : 75 76
agregaComparCuad     : 56 57 58 59 60 61
agregaFloatCuad      : 74
agregaFuncion        : 10
agregaIfCuadP1       : 32
agregaIfCuadP2       : 33
agregaIfCuadP3       : 32
agregaIgualCuad      : 28 29
agregaIntCuad        : 73
agregaMultDivCuad    : 66 67 68
agregaPowCuad        : 70
agregaReadCuad       : 26
agregaReturnCuad     : 27
agregaSumResCuad     : 63 64
agregaWriteCuad      : 25
arreglo              : 44
cambiaScope          : 1
circuloCuad          : 82
cuadArrPush          : 72
cuadruploAsignaArr   : 29
decExpresion         : 52 53 54
decParamFuncs        : 79 87
decParametros        : 10 14
decSolucion          : 69 70
decTipo              : 10 13 14
declaraFunciones     : 1 8
defExpresiones       : 28 29 29 31 32 53 54 72 78
defFuncion           : 8
defVar1              : 39 40 41 42 45
defVar2              : 43 44
defVariables         : 6 17
else                 : 32
empty                : 7 9 23 30 34 46 49 50 51 81 88 89 90 91 92 93 94 101
endProcCuad          : 10
endPrograma          : 1
eraCuadruplo         : 79
escribeArr           : 48
espiralCuad          : 84
estrellaCuad         : 85
extraNeed            : 28
fillMainQuad         : 1
funcCiclos           : 15
funcCondicionales    : 16
funcIgual            : 19
funcRead             : 21
funcReturn           : 22
funcWrite            : 20
funcionesDibuja      : 80
goSubCuadruplo       : 79
llamadaDeFunciones   : 18 77
mainBloque           : 1 10 15 16 17 18 19 20 21 22 31 32 33
meteVariable         : 13 14 47
microExp             : 62 63 64 66 67 68
micromicroExp        : 65 66 67 68 70
miniExp              : 55 56 56 57 57 58 58 59 59 60 60 61 61 63 64
paramCuadruplo       : 86 87
programa             : 0
pushPilaOp           : 28 53 54 56 57 58 59 60 61 63 64 66 67 68 70 78 78
pushPilaVar          : 28 71
rectanguloCuad       : 83
setMainFuncionValores : 1
startQuad            : 1
tipoVar              : 35 36 37 38 39 40 41 42
varGlobales          : 1 6
variable             : 43
whileCuadP1          : 31
whileCuadP2          : 31
whileCuadP3          : 31

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . startQuad varGlobales cambiaScope declaraFunciones PR_main fillMainQuad TO_BRACKOP setMainFuncionValores mainBloque TO_BRACKCLO endPrograma
    (2) startQuad -> .

    PR_global       reduce using rule 2 (startQuad -> .)
    PR_function     reduce using rule 2 (startQuad -> .)
    PR_main         reduce using rule 2 (startQuad -> .)

    programa                       shift and go to state 1
    startQuad                      shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> startQuad . varGlobales cambiaScope declaraFunciones PR_main fillMainQuad TO_BRACKOP setMainFuncionValores mainBloque TO_BRACKCLO endPrograma
    (6) varGlobales -> . PR_global defVariables varGlobales
    (7) varGlobales -> . empty
    (118) empty -> .

    PR_global       shift and go to state 4
    PR_function     reduce using rule 118 (empty -> .)
    PR_main         reduce using rule 118 (empty -> .)

    varGlobales                    shift and go to state 3
    empty                          shift and go to state 5

state 3

    (1) programa -> startQuad varGlobales . cambiaScope declaraFunciones PR_main fillMainQuad TO_BRACKOP setMainFuncionValores mainBloque TO_BRACKCLO endPrograma
    (5) cambiaScope -> .

    PR_function     reduce using rule 5 (cambiaScope -> .)
    PR_main         reduce using rule 5 (cambiaScope -> .)

    cambiaScope                    shift and go to state 6

state 4

    (6) varGlobales -> PR_global . defVariables varGlobales
    (39) defVariables -> . PR_int tipoVar defVar1 TO_PuntoComa
    (40) defVariables -> . PR_float tipoVar defVar1 TO_PuntoComa
    (41) defVariables -> . PR_bool tipoVar defVar1 TO_PuntoComa
    (42) defVariables -> . PR_void tipoVar defVar1 TO_PuntoComa

    PR_int          shift and go to state 8
    PR_float        shift and go to state 9
    PR_bool         shift and go to state 10
    PR_void         shift and go to state 11

    defVariables                   shift and go to state 7

state 5

    (7) varGlobales -> empty .

    PR_function     reduce using rule 7 (varGlobales -> empty .)
    PR_main         reduce using rule 7 (varGlobales -> empty .)


state 6

    (1) programa -> startQuad varGlobales cambiaScope . declaraFunciones PR_main fillMainQuad TO_BRACKOP setMainFuncionValores mainBloque TO_BRACKCLO endPrograma
    (8) declaraFunciones -> . PR_function defFuncion declaraFunciones
    (9) declaraFunciones -> . empty
    (118) empty -> .

    PR_function     shift and go to state 13
    PR_main         reduce using rule 118 (empty -> .)

    declaraFunciones               shift and go to state 12
    empty                          shift and go to state 14

state 7

    (6) varGlobales -> PR_global defVariables . varGlobales
    (6) varGlobales -> . PR_global defVariables varGlobales
    (7) varGlobales -> . empty
    (118) empty -> .

    PR_global       shift and go to state 4
    PR_function     reduce using rule 118 (empty -> .)
    PR_main         reduce using rule 118 (empty -> .)

    varGlobales                    shift and go to state 15
    empty                          shift and go to state 5

state 8

    (39) defVariables -> PR_int . tipoVar defVar1 TO_PuntoComa
    (50) tipoVar -> . empty
    (118) empty -> .

    ID              reduce using rule 118 (empty -> .)

    tipoVar                        shift and go to state 16
    empty                          shift and go to state 17

state 9

    (40) defVariables -> PR_float . tipoVar defVar1 TO_PuntoComa
    (50) tipoVar -> . empty
    (118) empty -> .

    ID              reduce using rule 118 (empty -> .)

    tipoVar                        shift and go to state 18
    empty                          shift and go to state 17

state 10

    (41) defVariables -> PR_bool . tipoVar defVar1 TO_PuntoComa
    (50) tipoVar -> . empty
    (118) empty -> .

    ID              reduce using rule 118 (empty -> .)

    tipoVar                        shift and go to state 19
    empty                          shift and go to state 17

state 11

    (42) defVariables -> PR_void . tipoVar defVar1 TO_PuntoComa
    (50) tipoVar -> . empty
    (118) empty -> .

    ID              reduce using rule 118 (empty -> .)

    tipoVar                        shift and go to state 20
    empty                          shift and go to state 17

state 12

    (1) programa -> startQuad varGlobales cambiaScope declaraFunciones . PR_main fillMainQuad TO_BRACKOP setMainFuncionValores mainBloque TO_BRACKCLO endPrograma

    PR_main         shift and go to state 21


state 13

    (8) declaraFunciones -> PR_function . defFuncion declaraFunciones
    (10) defFuncion -> . decTipo ID agregaFuncion TO_PAROP decParametros TO_PARCLO TO_BRACKOP mainBloque TO_BRACKCLO endProcCuad
    (35) decTipo -> . PR_int tipoVar
    (36) decTipo -> . PR_float tipoVar
    (37) decTipo -> . PR_bool tipoVar
    (38) decTipo -> . PR_void tipoVar

    PR_int          shift and go to state 24
    PR_float        shift and go to state 25
    PR_bool         shift and go to state 26
    PR_void         shift and go to state 27

    defFuncion                     shift and go to state 22
    decTipo                        shift and go to state 23

state 14

    (9) declaraFunciones -> empty .

    PR_main         reduce using rule 9 (declaraFunciones -> empty .)


state 15

    (6) varGlobales -> PR_global defVariables varGlobales .

    PR_function     reduce using rule 6 (varGlobales -> PR_global defVariables varGlobales .)
    PR_main         reduce using rule 6 (varGlobales -> PR_global defVariables varGlobales .)


state 16

    (39) defVariables -> PR_int tipoVar . defVar1 TO_PuntoComa
    (43) defVar1 -> . variable defVar2
    (44) defVar1 -> . arreglo defVar2
    (47) variable -> . ID meteVariable
    (48) arreglo -> . ID TO_CBRACKOP TO_INT TO_CBRACKCLO escribeArr

    ID              shift and go to state 31

    defVar1                        shift and go to state 28
    variable                       shift and go to state 29
    arreglo                        shift and go to state 30

state 17

    (50) tipoVar -> empty .

    ID              reduce using rule 50 (tipoVar -> empty .)


state 18

    (40) defVariables -> PR_float tipoVar . defVar1 TO_PuntoComa
    (43) defVar1 -> . variable defVar2
    (44) defVar1 -> . arreglo defVar2
    (47) variable -> . ID meteVariable
    (48) arreglo -> . ID TO_CBRACKOP TO_INT TO_CBRACKCLO escribeArr

    ID              shift and go to state 31

    defVar1                        shift and go to state 32
    variable                       shift and go to state 29
    arreglo                        shift and go to state 30

state 19

    (41) defVariables -> PR_bool tipoVar . defVar1 TO_PuntoComa
    (43) defVar1 -> . variable defVar2
    (44) defVar1 -> . arreglo defVar2
    (47) variable -> . ID meteVariable
    (48) arreglo -> . ID TO_CBRACKOP TO_INT TO_CBRACKCLO escribeArr

    ID              shift and go to state 31

    defVar1                        shift and go to state 33
    variable                       shift and go to state 29
    arreglo                        shift and go to state 30

state 20

    (42) defVariables -> PR_void tipoVar . defVar1 TO_PuntoComa
    (43) defVar1 -> . variable defVar2
    (44) defVar1 -> . arreglo defVar2
    (47) variable -> . ID meteVariable
    (48) arreglo -> . ID TO_CBRACKOP TO_INT TO_CBRACKCLO escribeArr

    ID              shift and go to state 31

    defVar1                        shift and go to state 34
    variable                       shift and go to state 29
    arreglo                        shift and go to state 30

state 21

    (1) programa -> startQuad varGlobales cambiaScope declaraFunciones PR_main . fillMainQuad TO_BRACKOP setMainFuncionValores mainBloque TO_BRACKCLO endPrograma
    (3) fillMainQuad -> .

    TO_BRACKOP      reduce using rule 3 (fillMainQuad -> .)

    fillMainQuad                   shift and go to state 35

state 22

    (8) declaraFunciones -> PR_function defFuncion . declaraFunciones
    (8) declaraFunciones -> . PR_function defFuncion declaraFunciones
    (9) declaraFunciones -> . empty
    (118) empty -> .

    PR_function     shift and go to state 13
    PR_main         reduce using rule 118 (empty -> .)

    declaraFunciones               shift and go to state 36
    empty                          shift and go to state 14

state 23

    (10) defFuncion -> decTipo . ID agregaFuncion TO_PAROP decParametros TO_PARCLO TO_BRACKOP mainBloque TO_BRACKCLO endProcCuad

    ID              shift and go to state 37


state 24

    (35) decTipo -> PR_int . tipoVar
    (50) tipoVar -> . empty
    (118) empty -> .

    ID              reduce using rule 118 (empty -> .)

    tipoVar                        shift and go to state 38
    empty                          shift and go to state 17

state 25

    (36) decTipo -> PR_float . tipoVar
    (50) tipoVar -> . empty
    (118) empty -> .

    ID              reduce using rule 118 (empty -> .)

    tipoVar                        shift and go to state 39
    empty                          shift and go to state 17

state 26

    (37) decTipo -> PR_bool . tipoVar
    (50) tipoVar -> . empty
    (118) empty -> .

    ID              reduce using rule 118 (empty -> .)

    tipoVar                        shift and go to state 40
    empty                          shift and go to state 17

state 27

    (38) decTipo -> PR_void . tipoVar
    (50) tipoVar -> . empty
    (118) empty -> .

    ID              reduce using rule 118 (empty -> .)

    tipoVar                        shift and go to state 41
    empty                          shift and go to state 17

state 28

    (39) defVariables -> PR_int tipoVar defVar1 . TO_PuntoComa

    TO_PuntoComa    shift and go to state 42


state 29

    (43) defVar1 -> variable . defVar2
    (45) defVar2 -> . TO_COMA defVar1
    (46) defVar2 -> . empty
    (118) empty -> .

    TO_COMA         shift and go to state 44
    TO_PuntoComa    reduce using rule 118 (empty -> .)

    defVar2                        shift and go to state 43
    empty                          shift and go to state 45

state 30

    (44) defVar1 -> arreglo . defVar2
    (45) defVar2 -> . TO_COMA defVar1
    (46) defVar2 -> . empty
    (118) empty -> .

    TO_COMA         shift and go to state 44
    TO_PuntoComa    reduce using rule 118 (empty -> .)

    defVar2                        shift and go to state 46
    empty                          shift and go to state 45

state 31

    (47) variable -> ID . meteVariable
    (48) arreglo -> ID . TO_CBRACKOP TO_INT TO_CBRACKCLO escribeArr
    (51) meteVariable -> . empty
    (118) empty -> .

    TO_CBRACKOP     shift and go to state 48
    TO_COMA         reduce using rule 118 (empty -> .)
    TO_PuntoComa    reduce using rule 118 (empty -> .)

    meteVariable                   shift and go to state 47
    empty                          shift and go to state 49

state 32

    (40) defVariables -> PR_float tipoVar defVar1 . TO_PuntoComa

    TO_PuntoComa    shift and go to state 50


state 33

    (41) defVariables -> PR_bool tipoVar defVar1 . TO_PuntoComa

    TO_PuntoComa    shift and go to state 51


state 34

    (42) defVariables -> PR_void tipoVar defVar1 . TO_PuntoComa

    TO_PuntoComa    shift and go to state 52


state 35

    (1) programa -> startQuad varGlobales cambiaScope declaraFunciones PR_main fillMainQuad . TO_BRACKOP setMainFuncionValores mainBloque TO_BRACKCLO endPrograma

    TO_BRACKOP      shift and go to state 53


state 36

    (8) declaraFunciones -> PR_function defFuncion declaraFunciones .

    PR_main         reduce using rule 8 (declaraFunciones -> PR_function defFuncion declaraFunciones .)


state 37

    (10) defFuncion -> decTipo ID . agregaFuncion TO_PAROP decParametros TO_PARCLO TO_BRACKOP mainBloque TO_BRACKCLO endProcCuad
    (11) agregaFuncion -> .

    TO_PAROP        reduce using rule 11 (agregaFuncion -> .)

    agregaFuncion                  shift and go to state 54

state 38

    (35) decTipo -> PR_int tipoVar .

    ID              reduce using rule 35 (decTipo -> PR_int tipoVar .)


state 39

    (36) decTipo -> PR_float tipoVar .

    ID              reduce using rule 36 (decTipo -> PR_float tipoVar .)


state 40

    (37) decTipo -> PR_bool tipoVar .

    ID              reduce using rule 37 (decTipo -> PR_bool tipoVar .)


state 41

    (38) decTipo -> PR_void tipoVar .

    ID              reduce using rule 38 (decTipo -> PR_void tipoVar .)


state 42

    (39) defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .

    PR_global       reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_function     reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_main         reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_While        reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_if           reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_int          reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_float        reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_bool         reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_void         reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    ID              reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_write        reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_read         reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_return       reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_circulo      reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_rectangulo   reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_espiral      reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_estrella     reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    TO_BRACKCLO     reduce using rule 39 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)


state 43

    (43) defVar1 -> variable defVar2 .

    TO_PuntoComa    reduce using rule 43 (defVar1 -> variable defVar2 .)


state 44

    (45) defVar2 -> TO_COMA . defVar1
    (43) defVar1 -> . variable defVar2
    (44) defVar1 -> . arreglo defVar2
    (47) variable -> . ID meteVariable
    (48) arreglo -> . ID TO_CBRACKOP TO_INT TO_CBRACKCLO escribeArr

    ID              shift and go to state 31

    defVar1                        shift and go to state 55
    variable                       shift and go to state 29
    arreglo                        shift and go to state 30

state 45

    (46) defVar2 -> empty .

    TO_PuntoComa    reduce using rule 46 (defVar2 -> empty .)


state 46

    (44) defVar1 -> arreglo defVar2 .

    TO_PuntoComa    reduce using rule 44 (defVar1 -> arreglo defVar2 .)


state 47

    (47) variable -> ID meteVariable .

    TO_COMA         reduce using rule 47 (variable -> ID meteVariable .)
    TO_PuntoComa    reduce using rule 47 (variable -> ID meteVariable .)


state 48

    (48) arreglo -> ID TO_CBRACKOP . TO_INT TO_CBRACKCLO escribeArr

    TO_INT          shift and go to state 56


state 49

    (51) meteVariable -> empty .

    TO_COMA         reduce using rule 51 (meteVariable -> empty .)
    TO_PuntoComa    reduce using rule 51 (meteVariable -> empty .)
    TO_PARCLO       reduce using rule 51 (meteVariable -> empty .)


state 50

    (40) defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .

    PR_global       reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_function     reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_main         reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_While        reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_if           reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_int          reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_float        reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_bool         reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_void         reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    ID              reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_write        reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_read         reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_return       reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_circulo      reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_rectangulo   reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_espiral      reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_estrella     reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    TO_BRACKCLO     reduce using rule 40 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)


state 51

    (41) defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .

    PR_global       reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_function     reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_main         reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_While        reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_if           reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_int          reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_float        reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_bool         reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_void         reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    ID              reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_write        reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_read         reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_return       reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_circulo      reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_rectangulo   reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_espiral      reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_estrella     reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    TO_BRACKCLO     reduce using rule 41 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)


state 52

    (42) defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .
